add daily rolling file appender

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ compound_policy = []
 delete_roller = []
 fixed_window_roller = []
 size_trigger = []
+daily_trigger = []
 json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "serde_derive", "log/serde", "thread-id"]
 pattern_encoder = ["chrono", "log-mdc", "thread-id"]
 ansi_writer = []
@@ -42,6 +43,7 @@ all_components = [
     "delete_roller",
     "fixed_window_roller",
     "size_trigger",
+    "daily_trigger",
     "json_encoder",
     "pattern_encoder",
     "threshold_filter"
