Enforce cargo fmt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - image: rust:1.38.0
     steps:
       - checkout
+      - run: cargo fmt -- --check
       - run: apt-get update
       - run: apt-get install -y --no-install-recommends jq
       - *RESTORE_REGISTRY
