--- a/examples/log_to_file/Cargo.toml
+++ b/examples/log_to_file/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "json_logger"
+name = "log_to_file"
 version = "0.1.0"
 authors = ["Calvin Brown <cab025@protonmail.com"]
 edition = "2018"
 
 [dependencies]
 log = "0.4.8"
-log4rs = {version = "0.8.3", features = ["json_encoder"]}
+log4rs = {path = "../.."}
