[WIP] Adding check for editor config lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - checkout
       - run: rustup component add rustfmt
       - run: cargo fmt -- --check
+      - run: docker run --rm -v $(pwd):/app/code qima/eclint:circleci-latest check $(git ls-files)
       - run: apt-get update
       - run: apt-get install -y --no-install-recommends jq
       - *RESTORE_REGISTRY
