--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,14 @@ jobs:
       - image: rust:1.38.0
     steps:
       - checkout
-      - setup_remote_docker
+      - run:
+          name: Install Docker client
+          command: |
+              set -x
+              VER="17.03.0-ce"
+              curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+              tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+              mv /tmp/docker/* /usr/bin
       - run: docker run --rm -v $(pwd):/app/code qima/eclint:circleci-latest check $(git ls-files)
       - run: rustup component add rustfmt
       - run: cargo fmt -- --check
