--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
               curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
               tar -xz -C /tmp -f /tmp/docker-$VER.tgz
               mv /tmp/docker/* /usr/bin
+      - setup_remote_docker
       - run: docker run --rm -v $(pwd):/app/code qima/eclint:circleci-latest check $(git ls-files)
       - run: rustup component add rustfmt
       - run: cargo fmt -- --check
