Adding log_to_file example (#97)
* Adding log to file example

* Cleaning up a few comments and the json_logger cargo file

* Removing the folder examples and just sticking with individual files

* Cargo fmt

* One more fmt :)

* Fixing error

* Fixing formatting

* Required features for examples

* Json logger needs console appender

* We no longer have a log4rs file for this example.

* Removing autoexamples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,3 +76,11 @@ libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 tempdir = "0.3"
+
+[[example]]
+name = "json_logger"
+required-features = ["json_encoder", "console_appender"]
+
+[[example]]
+name = "log_to_file"
+required-features = ["console_appender", "file_appender", "rolling_file_appender"]
