--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
 serde-xml-rs = { version = "0.2", optional = true }
+downcast-rs = "1.1.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
