--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,19 @@ version: 2
 jobs:
   build:
     working_directory: ~/build
-    machine: true
     docker:
       - image: rust:1.38.0
     steps:
       - checkout
+      - run:
+          name: Install Docker client
+          command: |
+              set -x
+              VER="17.03.0-ce"
+              curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+              tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+              mv /tmp/docker/* /usr/bin
+      - setup_remote_docker
       - run: docker run --rm -v $(pwd):/app/code qima/eclint check
       - run: rustup component add rustfmt
       - run: cargo fmt -- --check
