--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "log4rs"
-version = "0.8.3"
-authors = ["Steven Fackler <sfackler@gmail.com>"]
+version = "0.9.0"
+authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/estk/log4rs"
