--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/estk/log4rs"
 readme = "README.md"
 keywords = ["logger", "log", "logging"]
+edition = '2018'
 
 [features]
 default = ["all_components", "gzip", "file", "yaml_format"]
