--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,13 @@ on: [pull_request]
 
 jobs:
 
+  fmt:
+    name: Format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@master
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -30,7 +37,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        rust_versions: ["stable", "1.34.0"]
+        rust_versions: ["stable", "1.38.0"]
         os: [ubuntu-latest, windows-latest]
         cargo_build_flags: ["--all-features"]
     steps:
