--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
 threshold_filter = []
+async_fs = ["async-std", "async-trait"]
 
 all_components = [
     "console_appender",
@@ -66,6 +67,7 @@ serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
 serde-xml-rs = { version = "0.3", optional = true }
 async-std = { version = "1.5.0", optional = true }
+async-trait = {version = "0.1.24", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
