--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "log4rs"
-version = "0.10.0"
+version = "0.11.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/estk/log4rs"
 readme = "README.md"
-keywords = ["logger", "log", "logging"]
+keywords = ["log", "logger", "logging", "log4"]
 edition = '2018'
 
 [features]
-default = ["all_components", "gzip", "file", "yaml_format"]
+default = ["all_components", "file", "yaml_format"]
 
 file = ["humantime", "serde", "serde_derive", "serde-value", "typemap", "log/serde"]
 yaml_format = ["serde_yaml"]
@@ -19,8 +19,8 @@ toml_format = ["toml"]
 xml_format = ["serde-xml-rs"]
 
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
-file_appender = ["antidote", "simple_writer", "pattern_encoder"]
-rolling_file_appender = ["antidote", "simple_writer", "pattern_encoder"]
+file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
+rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
 compound_policy = []
 delete_roller = []
 fixed_window_roller = []
@@ -31,7 +31,7 @@ ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
 threshold_filter = []
-async_rotation = []
+background_rotation = []
 
 all_components = [
     "console_appender",
@@ -49,7 +49,6 @@ all_components = [
 gzip = ["flate2"]
 
 [dependencies]
-antidote = { version = "1.0", optional = true }
 arc-swap = "0.4"
 chrono = { version = "0.4", optional = true }
 flate2 = { version = "1.0", optional = true }
@@ -66,6 +65,7 @@ serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
 serde-xml-rs = { version = "0.3", optional = true }
+parking_lot = { version = "0.10.0", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
