--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,10 @@ all_components = [
 
 gzip = ["flate2"]
 
+[[bench]]
+name = "rotation"
+harness = false
+
 [dependencies]
 arc-swap = "0.4"
 chrono = { version = "0.4", optional = true }
@@ -75,6 +79,9 @@ libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 tempdir = "0.3"
+criterion = "0.3"
+lazy_static = "1.4"
+rayon = "1.3.0"
 
 [[example]]
 name = "json_logger"
