--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "log4rs"
-version = "0.11.0"
+version = "0.10.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
@@ -82,6 +82,9 @@ tempdir = "0.3"
 criterion = "0.3"
 lazy_static = "1.4"
 rayon = "1.3.0"
+streaming-stats = "0.2.3"
+humantime = "1.0.0"
+tempfile = "3.1.0"
 
 [[example]]
 name = "json_logger"
