--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ harness = false
 [dependencies]
 arc-swap = "0.4"
 chrono = { version = "0.4", optional = true }
+failure_derive = "0.1.6"
+failure = "0.1.6"
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
 humantime = { version = "1.0", optional = true }
