Fix tempdir getting cleaned up early, add normal rotation bench

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,8 +88,11 @@ jobs:
           rustup toolchain install --no-self-update stable
           rustup default stable
 
-      - name: bench lib no bg
+      - name: Rotation without compression
+        run: cargo bench rotation
+
+      - name: Rotation with compression
         run: "! cargo bench  --features gzip"
 
-      - name: bench lib
+      - name: Rotation with backgrounded rotation
         run: cargo bench  --features gzip,background_rotation
