--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
 serde-xml-rs = { version = "0.3", optional = true }
 parking_lot = { version = "0.10.0", optional = true }
+cfg-if = "0.1.10"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
