--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,7 @@ jobs:
         run: cargo fmt -- --check
 
       - name: Run clippy
-        run: cargo clippy --all --all-features
-        # when the typemap stuff gets resolved
-        # run: cargo clippy --all --all-features -- -Dwarnings
+        run: bash -e .github/workflows/lint_each_feature.sh
 
   test:
     name: Test
@@ -37,7 +35,6 @@ jobs:
       matrix:
         rust_versions: ["stable", "1.38.0"]
         os: [ubuntu-latest, windows-latest]
-        cargo_build_flags: ["--all-features"]
     steps:
       - name: Checkout the source code
         uses: actions/checkout@master
@@ -51,7 +48,7 @@ jobs:
         run: rustup run ${{ matrix.rust_versions }} cargo build ${{ matrix.cargo_build_flags }}
 
       - name: test lib
-        run: cargo test ${{ matrix.cargo_build_flags }} -- ${{ matrix.test_flags }}
+        run: bash -e .github/workflows/test_each_feature.sh
 
   features:
     name: Test Individual Features
