--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ json_format = ["serde_json"]
 toml_format = ["toml"]
 
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
-file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
-rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
+file_appender = ["parking_lot", "simple_writer", "pattern_encoder", "regex"]
+rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder", "regex"]
 compound_policy = []
 delete_roller = []
 fixed_window_roller = []
@@ -68,6 +68,7 @@ serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
 parking_lot = { version = "0.10.0", optional = true }
+regex = { version = "1", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
