--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ parking_lot = { version = "0.11.0", optional = true }
 regex = { version = "1", optional = true }
 thiserror = "1.0.15"
 anyhow = "1.0.28"
+derivative = "2.1.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
