--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
 threshold_filter = []
 background_rotation = []
+windbg = []
 
 all_components = [
     "console_appender",
@@ -60,7 +61,7 @@ fnv = "1.0"
 humantime = { version = "1.0", optional = true }
 log = { version = "0.4.0", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"]}
 serde_derive = { version = "1.0", optional = true }
 serde-value = { version = "0.6", optional = true }
 thread-id = { version = "3.3", optional = true }
@@ -72,7 +73,7 @@ serde-xml-rs = { version = "0.4", optional = true }
 parking_lot = { version = "0.11.0", optional = true }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
+winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon","debugapi"] }
 
 [target.'cfg(not(windows))'.dependencies]
 libc = { version = "0.2", optional = true }
@@ -90,3 +91,5 @@ required-features = ["json_encoder", "console_appender"]
 [[example]]
 name = "log_to_file"
 required-features = ["console_appender", "file_appender", "rolling_file_appender"]
+
+
