--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "log4rs"
-version = "0.13.0"
+version = "1.0.0-alpha-2"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
@@ -10,22 +10,21 @@ keywords = ["log", "logger", "logging", "log4"]
 edition = '2018'
 
 [features]
-default = ["all_components", "file", "yaml_format", "gzip"]
+default = ["all_components", "config_parsing", "yaml_format"]
 
-file = ["humantime", "serde", "serde_derive", "serde-value", "typemap", "log/serde"]
+config_parsing = ["humantime", "serde", "serde-value", "typemap", "log/serde"]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
-xml_format = ["serde-xml-rs"]
 
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
-file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
-rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
+file_appender = ["parking_lot", "simple_writer", "pattern_encoder", "regex"]
+rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder", "regex"]
 compound_policy = []
 delete_roller = []
 fixed_window_roller = []
 size_trigger = []
-json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "serde_derive", "log/serde", "thread-id"]
+json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "log/serde", "thread-id"]
 pattern_encoder = ["chrono", "log-mdc", "thread-id"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
@@ -57,19 +56,21 @@ arc-swap = "0.4"
 chrono = { version = "0.4", optional = true }
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
-humantime = { version = "1.0", optional = true }
+humantime = { version = "2.0", optional = true }
 log = { version = "0.4.0", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
-serde = { version = "1.0", optional = true }
-serde_derive = { version = "1.0", optional = true }
-serde-value = { version = "0.6", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde-value = { version = "0.7", optional = true }
 thread-id = { version = "3.3", optional = true }
 typemap = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
 toml = { version = "0.5", optional = true }
-serde-xml-rs = { version = "0.4", optional = true }
 parking_lot = { version = "0.11.0", optional = true }
+regex = { version = "1", optional = true }
+thiserror = "1.0.15"
+anyhow = "1.0.28"
+derivative = "2.1.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
@@ -80,7 +81,7 @@ libc = { version = "0.2", optional = true }
 [dev-dependencies]
 lazy_static = "1.4"
 streaming-stats = "0.2.3"
-humantime = "1.0.0"
+humantime = "2.0"
 tempfile = "3.1.0"
 
 [[example]]
