Edited `PatternEncoder::new_with_colormap()` function to merge user's chosen color map with the default. This is for better usage when using rust code for log4rs configurations
Example to change only Info level log color:

```
        // Change color of Info level log msgs
        let mut log_color_map = HashMap::new();
        log_color_map.insert(log::Level::Info, Some(log4rs::encode::Color::Cyan));
        let pattern_encoder = PatternEncoder::new_with_colormap("{d} - {m}{n}", log_color_map);
```

--- a/test/log.yml
+++ b/test/log.yml
@@ -5,6 +5,9 @@ appenders:
     kind: console
     encoder:
       pattern: "{d(%+)(local)} [{t}] {h({l})} {M}:{m}{n}"
+      color_map: 
+        Info: Cyan
+        Warn: Red
     filters:
     - kind: threshold
       level: error
