Add support for gettid() to PatternEncoder (#232)
* Add support for gettid() to PatternEncoder

Add {i} and {tid} to allow logging in particular the Linux
thread ID as returned by gettid(). This is very useful for
system-wide debugging und monitoring with consistent
thread/task IDs.

Fixes: #231

* Switch to palaver crate and move thread_local()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ delete_roller = []
 fixed_window_roller = []
 size_trigger = []
 json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "log/serde", "thread-id"]
-pattern_encoder = ["chrono", "log-mdc", "thread-id"]
+pattern_encoder = ["chrono", "log-mdc", "thread-id", "palaver"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
@@ -62,6 +62,7 @@ log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 serde-value = { version = "0.7", optional = true }
 thread-id = { version = "3.3", optional = true }
+palaver = { version = "0.2", optional = true }
 typemap = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
