Make parking_lot optional

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,16 @@ keywords = ["log", "logger", "logging", "log4"]
 edition = '2018'
 
 [features]
-default = ["all_components", "config_parsing", "yaml_format"]
+default = ["all_components", "config_parsing", "yaml_format", "parking_lot"]
 
 config_parsing = ["humantime", "serde", "serde-value", "typemap", "log/serde"]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
 
-console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
-file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
-rolling_file_appender = ["parking_lot", "simple_writer", "pattern_encoder"]
+console_appender = ["console_writer", "simple_writer"]
+file_appender = ["simple_writer", "pattern_encoder"]
+rolling_file_appender = ["simple_writer", "pattern_encoder"]
 compound_policy = []
 delete_roller = []
 fixed_window_roller = []
