--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 # serde-value = { version = "0.7", optional = true }
 thread-id = { version = "4", optional = true }
-typemap = { version = "0.3", optional = true }
+# typemap = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
 toml = { version = "0.5", optional = true }
