--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = '2018'
 [features]
 default = ["all_components", "config_parsing", "yaml_format"]
 full = ["default", "json_format", "toml_format"]
-config_parsing = ["humantime", "serde", "typemap", "log/serde"] # serde-value
+config_parsing = ["humantime", "serde",  "log/serde"] # serde-value, "typemap",
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
