--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "log4rs"
-version = "1.1.1"
+version = "1.2.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/estk/log4rs"
 readme = "README.md"
 keywords = ["log", "logger", "logging", "log4"]
-edition = '2018'
+edition = "2018"
+rust = "1.56"
 
 [features]
 default = ["all_components", "config_parsing", "yaml_format"]
