feat: Add support for forcing stdout ansi

--- a/examples/sample_config.yml
+++ b/examples/sample_config.yml
@@ -1,6 +1,7 @@
 appenders:
     stdout:
         kind: console
+        force_tty: true
         encoder:
             pattern: "{d(%+)(utc)} [{f}:{L}] {h({l})} {M}:{m}{n}"
         filters:
