--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,11 @@ jobs:
         env:
           RUSTFLAGS: -D warnings
 
+      - name: Markdown Linting Action
+        uses: avto-dev/markdown-lint@v1.5.0
+      
+
+
   test:
     name: Test
     runs-on: ${{ matrix.os }}
