--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
     - devel
 
 jobs:
-  lint:
+  rust-lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
@@ -31,11 +31,6 @@ jobs:
         run: cargo clippy --all-features
         env:
           RUSTFLAGS: -D warnings
-
-      - name: Markdown Linting Action
-        uses: avto-dev/markdown-lint@v1.5.0
-      
-
 
   test:
     name: Test
@@ -98,3 +93,10 @@ jobs:
 
       - name: Rotation with backgrounded rotation
         run: cargo bench  --features gzip,background_rotation
+
+  docs-lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Markdown Linting Action
+        uses: avto-dev/markdown-lint@v1.5.0
