--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,4 +102,4 @@ jobs:
         uses: avto-dev/markdown-lint@v1.5.0
         with:
           config: .markdownlint.yml
-          args: docs/Configuration.md
+          args: docs/Configuration.md README.md
