--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,10 +110,9 @@ jobs:
         run: cargo install cargo-audit
 
       - name: Build all features
-        run: cargo build --all-features
-
-      - name: Audit baseline
-        run: cargo audit
+        run: |
+          cargo build --all-features
+          cargo audit
 
   docs-lint:
     name: Lint
