--- a/examples/sample_config.yml
+++ b/examples/sample_config.yml
@@ -1,12 +1,33 @@
 appenders:
-  stdout:
-    kind: console
-    encoder:
-      pattern: "{d(%+)(utc)} [{f}:{L}] {h({l})} {M}:{m}{n}"
-    filters:
-      - kind: threshold
-        level: info
+    stdout:
+        kind: console
+        encoder:
+            pattern: "{d(%+)(utc)} [{f}:{L}] {h({l})} {M}:{m}{n}"
+        filters:
+            - kind: threshold
+              level: info
+    file:
+        kind: file
+        path: "log/log.log"
+        encoder:
+            pattern: "[{d(%Y-%m-%dT%H:%M:%S%.6f)} {h({l}):<5.5} {M}] {m}{n}"
+    rollingfile:
+        kind: rolling_file
+        path: "log/log2.log"
+        encoder:
+            pattern: "[{d(%Y-%m-%dT%H:%M:%S%.6f)} {h({l}):<5.5} {M}] {m}{n}"
+        policy:
+            trigger: 
+                kind: time
+                limit: 1 minute 
+            roller: 
+                kind: fixed_window
+                pattern: "log/old-log-{}.log" 
+                base: 0 
+                count: 2 
 root:
-  level: info
-  appenders:
-    - stdout
+    level: info
+    appenders:
+        - stdout
+        - file
+        - rollingfile
